--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,3 +1,36 @@
+/* loading content */
+.page__loading{
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+.page__loading div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
+}
+
+.page__loading div p{
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+/* Navbar */
+.userImg{
+    width: 70px;
+    height: 50px;
+}
+
+.userImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 50%;
+}
+
+
 .home_leftside{
     height: 80vh;
     display: flex;
