--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -19,14 +19,14 @@
 
 /* Navbar */
 .userImg{
-    width: 70px;
+    width: 50px;
     height: 50px;
 }
 
 .userImg img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 50%;
 }
 
